--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 body {
     font-family: 'Handlee', cursive;
     font-size: 13pt;
-    background-color: #e2e8f0;
+    background-color: #efefef;
     padding: 10px;
     margin: 0;
 }
@@ -59,6 +59,7 @@ p {
 }
 table {
     width: 100%;
+    font-size: 11pt;
 }
 table, th, td {
     border: 2px solid #cecece;
@@ -161,3 +162,16 @@ input, textarea {
     padding-bottom: 10px;
     color: grey;
 }
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 20%;
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  .container {
+    padding: 2px 16px;
+  }
