--- a/change_color/change.css
+++ b/change_color/change.css
@@ -2,14 +2,20 @@
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
-   padding: 10pt;
-  border-radius: 6px;
+   padding: 0.75rem 1.25rem;
+   border-radius:0.25rem;
    position: absolute;
    letter-spacing: 10px;
-   color: white;
-   background: rgb(130, 118, 196);
-   font-weight: bold;
-   font-size: 20px;
+   color: #222;
+ display:inline-block;
+ text-transform: uppercase;
+ background: transparent;
+ font-size: 1rem;
+ cursor: pointer;
+ font-weight: 700;
+ transition:all 0.3s linear;
+ box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  
 }
 .contaner{
     width: 100%;
@@ -18,3 +24,5 @@
     position: absolute;
     
 }
+
+
