--- a/snake_nokia/style.css
+++ b/snake_nokia/style.css
@@ -18,4 +18,10 @@
   .apple {
     background-color: purple;
   }
+  .container{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+  }
   
