--- a/space_invaders/style.css
+++ b/space_invaders/style.css
@@ -27,3 +27,9 @@
 .boom {
 	background-color: red;
 }
+.container{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+  }
