--- a/typing_test/typingstyle.css
+++ b/typing_test/typingstyle.css
@@ -5,7 +5,7 @@
     font-family: "Poppins", sans-serif;
   }
   body {
-    background-color: #3066f6;
+    background-color: #B5DAF9;
   }
   .container {
     width: 80vmin;
