--- a/style.css
+++ b/style.css
@@ -1,272 +1,19 @@
-html {
-    margin: 0;
-    padding: 0;
+h1{
+    font-family: Roboto, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.3rem;
+    letter-spacing: 2px;
 }
-body {
-    font-family: 'Handlee', cursive;
-    font-size: 13pt;
-    background-color: #efefef;
+.section{
+    background: #fff;
     padding: 10px;
-    margin: 0;
-}
-h1 {
-    font-size: 15pt;
-    color: #20bcd5;
-    text-align: center;
-    padding: 18px 0 18px 0;
-    margin: 0 0 10px 0;
-}
-.hh{
-    
-        font-size: 15pt;
-        color: #20bcd5;
-        text-align: left;
-        padding: 18px 0 18px 0;
-        margin: 0 0 10px 0;
-    
-}
-
-
-
-h1 span {
-    border: 4px dashed #20bcd5;
-    padding: 10px;
-}
-p {
-    margin-bottom: 1.5rem;
-    max-width: 40em;
+    border-radius: 10px;
+    margin: 10px;
+    box-shadow: 0px 0px 10px 0px #888888;
 }
 p{
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+ font-family: sans-serif;
+ font-size: 1.2rem;
 }
-.section {
-    background-color: #fff;
-    padding: 15px;
-    margin-bottom: 10px;
-    
-    
+.cc{
+    box-shadow: 0px 0px 10px 0px #888888;
 }
-
-
-.sidebar-one p {
-    margin: 2rem 0px;
-    font-size: 1.35rem;
-    color: #0f172a;
-    
-    text-align: left;
-   
-}
-.quote {
-    font-size: 12pt;
-    text-align: right;
-    margin-top: 10px;
-}
-table {
-    width: 100%;
-    font-size: 11pt;
-}
-table, th, td {
-    border: 2px solid #cecece;
-    border-collapse: collapse;
-    text-align: center;
-    table-layout: fixed;
-}
-.selected {
-    background-color: #f36f48;
-    font-weight: bold;
-    color: white;
-}
-li {
-    margin-bottom: 15px;
-    font-weight: bold;
-}
-progress {
-    width: 70%;
-    height: 20px;
-    color: #3fb6b2;
-    background: #efefef;
-}
-progress::-webkit-progress-bar {
-    background: #efefef;
-}
-progress::-webkit-progress-value {
-    background: #3fb6b2;
-} 
-progress::-moz-progress-bar {
-    color: #3fb6b2;
-    background: #efefef;
-}
-iframe, audio {
-    display: block;
-    margin: 0 auto;
-    border: 3px solid #3fb6b2;
-}
-hr {
-    border: 0;
-    height: 1px;
-    background: #f36f48;
-}
-form {
-    text-align: center;
-    margin-top: 0;
-}
-.submit {
-    background-color: #3fb6b2;
-    padding: 12px 45px;
-    border-radius: 5px;
-    cursor: pointer;
-    color: #ffffff;
-    border: none;
-    outline: none;
-    margin: 0;
-    font-weight: bold;
-}
-.submit:hover {
-    background-color: #43a09d;
-}
-textarea {
-    height: 100px;
-}
-input, textarea {
-    margin-bottom: 10px;
-    font-size: 11pt;
-    padding: 15px 10px 10px;
-    border: 1px solid #cecece;
-    background-color: #efefef;
-    color: #787575;
-    border-radius: 5px;
-    width: 70%;
-    outline: none;
-}
-.face {
-    transform: scale(0.4);
-    margin: 0 auto;
-    display: block;
-    margin-top: -35px;
-    margin-bottom: -25px;
-}
-#contacts img {
-    height: 50px;
-    width: 50px;
-    margin-left: 7px;
-    margin-right: 7px;
-}
-#contacts a {
-    text-decoration: none;
-}
-#contacts img:hover {
-    opacity: 0.8;
-}
-#contacts {
-    text-align: center;
-}
-.copyright {
-    font-size: 8pt;
-    text-align: right;
-    padding-bottom: 10px;
-    color: grey;
-}
-
-  
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-
-  /* Float four columns side by side */
-.column {
-    float: left;
-    width: 22%;
-    padding: 15px 15px;
-    
-  }
-  
-  /* Remove extra left and right margins, due to padding */
-  .row {margin: 0 -5px;
-    
-}
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-
-  }
-  
-  /* Responsive columns */
-  @media screen and (max-width: 600px) {
-    .column {
-      width: 100%;
-      display: block;
-      margin-bottom: 20px;
-      
-    }
-  }
-  
-  /* Style the counter cards */
-  .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 10px;
-    text-align: center;
-    background-color: #f1f1f1;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-  }
-
-
-  .column-layout{
-	max-width: 100%;
-	margin: 40px auto 0 auto;
-	line-height: 1.65;
-	padding: 10px 10px;
-	background-color: #FFF;
-	/*display: flex;*/
-}
-
-.main-column{
- 	flex: 1;
- 	order: 2; /*this is for ordering content to be shown in the middle of the page*/
- 	text-align: justify;
- 	padding: 0px 10px 0px 100px;
-	width: 100%;
-	box-sizing: border-box;
-	margin-bottom: 20px;
-	margin-right: 1px;
-    
-    
-
-}
-.sidebar-one{
- 	flex: 1;
- 	order: 1; /*this is for ordering content to be shown in the middle of the page*/
-    
- 	text-align: justify;
-
- 	padding: 0px 10px 0px 0px;
-	width: 100%;
-	box-sizing: border-box;
-	margin-bottom: 20px;
-	margin-right: 1px;
-    
-	
-}
-
-
-@media (min-width: 900px){
-	.column-layout{
-		display: flex; 
-		justify-content: space-around;
-	}
-}
-a{
-    color:black;
-    font-weight:600;
-    text-decoration-line: none;
-    letter-spacing: 2px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
